# CoreWar

./: README.md
CoreWar/: CMakeLists.txt  Makefile  cmake_install.cmake
CoreWar/include/: core.hpp  executionContext.hpp  factory.hpp  instruction.hpp  mars.hpp  model.cpp  model.h  parser.hpp
CoreWar/src/: arithmeticInstr.cpp  boolComand.cpp  core.cpp  datComand.cpp  executionContext.cpp  instruction.cpp  jumpComand.cpp  main.cpp  mars.cpp  movInstruction.cpp  parser.cpp  splCommand.cpp
CoreWarGui/: CoreWarGui.pro  caravanpage.cpp  caravanpage.h  caravanpage.ui  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h  scalearea.cpp  scalearea.h  scalearea.ui  settingpage.cpp  settingpage.h  settingpage.ui  warrior.cpp  warrior.h
